; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfinit.c_GetHeightFromPointsString.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfinit.c_GetHeightFromPointsString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOGPIXELSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetHeightFromPointsString(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 @GetDC(i32* null)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @atoi(i32 %6)
  %8 = sub nsw i32 0, %7
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @LOGPIXELSY, align 4
  %11 = call i32 @GetDeviceCaps(i32 %9, i32 %10)
  %12 = call i32 @MulDiv(i32 %8, i32 %11, i32 72)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @ReleaseDC(i32* null, i32 %13)
  %15 = load i32, i32* %4, align 4
  ret i32 %15
}

declare dso_local i32 @GetDC(i32*) #1

declare dso_local i32 @MulDiv(i32, i32, i32) #1

declare dso_local i32 @atoi(i32) #1

declare dso_local i32 @GetDeviceCaps(i32, i32) #1

declare dso_local i32 @ReleaseDC(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
